# tab-realdata-hub

./: AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  release-on-main.yml  test.yml
scripts/: check_version_bump.py
src/tab_realdata_hub/: __init__.py  _json.py  cli.py  dagzoo_handoff.py  manifest.py  openml.py  validation.py
src/tab_realdata_hub/bench/: nanotabpfn_openml_classification_large_v1.json  nanotabpfn_openml_classification_medium_v1.json  openml_classification_large_top10_v1.json  openml_classification_large_top25_v1.json  openml_classification_large_top50_v1.json  openml_classification_large_v1.json  openml_classification_medium_top10_v1.json  openml_classification_medium_top25_v1.json  openml_classification_medium_top50_v1.json  openml_classification_medium_v1.json
tests/: test_bench_bundle_fixtures.py  test_manifest_and_materialization.py  test_openml.py  test_project_boundary.py  test_version_bump.py
